ingress/ingress-nginx/basic/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - example.localhost
    secretName: ingress-secret
  rules:
  - host: example.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-service
          servicePort: 80
